Fusion-Qa-Final/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
        <label>Zendesk Support Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
        <description>Contains the Zendesk ORG Id</description>
        <label>Zendesk Support Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Support Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the record is not synced with Zendesk Organization</description>
        <label>Zendesk Support Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
        <label>Zendesk Support Old Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__createdUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the account that came for creation to get updated again thereby preventing the loop</description>
        <label>createdUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>PC_EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customer_List_w_YTD_Sales</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>YTD_Revenue__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ENSX_EDM__SAP_Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>PersonAccount.Outfitter</value>
        </filters>
        <label>Customer List w/ YTD Sales- Outside</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Inside_Sales_Rep_Text__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account1,Account.Canada</value>
        </filters>
        <filters>
            <field>ENSX_EDM__SAP_Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Location_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive,Closed</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts_Under_Review</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Location_Status__c</field>
            <operation>equals</operation>
            <value>Under Review</value>
        </filters>
        <label>My Accounts - Under Review</label>
        <sharedTo>
            <group>Field_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_accounts_LAST_WEEK</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Inside_Sales_Rep__c</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Established_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account1</value>
        </filters>
        <label>New accounts LAST WEEK</label>
    </listViews>
    <listViews>
        <fullName>Sync_Data</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Billing_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Order_Ready__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_CITY</field>
            <operation>equals</operation>
            <value>Houston</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account1</value>
        </filters>
        <label>Sync Data</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Account1</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada</fullName>
        <active>true</active>
        <label>Canada Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ship_To</fullName>
        <active>true</active>
        <description>Ship to Account in Sync with ERP</description>
        <label>Ship to</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Closure</fullName>
        <active>true</active>
        <description>Only Manager can change this Status</description>
        <errorConditionFormula>AND(
 ISPICKVAL( PRIORVALUE ( Location_Status__c), &quot;Closed&quot;),
 ISPICKVAL(Location_Status__c, &quot;Active&quot;), $Profile.Name = &quot;Bizdev&quot;)  
 || AND(OR(ISPICKVAL( PRIORVALUE ( Location_Status__c), &quot;Active&quot;), (ISPICKVAL( PRIORVALUE ( Location_Status__c),&quot;Inactive&quot;)), (ISPICKVAL( PRIORVALUE ( Location_Status__c),&quot;Under Review&quot;))),ISPICKVAL(Location_Status__c, &quot;Closed&quot;), $Profile.Name = &quot;Bizdev&quot;)</errorConditionFormula>
        <errorDisplayField>Location_Status__c</errorDisplayField>
        <errorMessage>Account managers only should close the account and be able to do Closed --&gt; Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Name_Limited_to_50Char</fullName>
        <active>false</active>
        <description>This validation limits the Account Name field to 50 characters so it will not error out when sync with Epicor whose limit is 50 characters</description>
        <errorConditionFormula>LEN( Name )&gt;50</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name needs to be  50 characters or less to sync with Epicor!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Needed_To_Sync</fullName>
        <active>false</active>
        <description>A complete address is required to sync a new Account.</description>
        <errorConditionFormula>AND(ISBLANK(BillingStreet),ISBLANK(BillingCity),ISBLANK(BillingState),ISBLANK(BillingPostalCode),ISBLANK(BillingCountry))</errorConditionFormula>
        <errorMessage>Please add Billing Country.A complete address is required to sync a new Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Owner_of_Account</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW()) 
&amp;&amp; 
AND (( $Profile.Name&lt;&gt;&apos;System Administrator&apos; &amp;&amp; 
$Profile.Name&lt;&gt;&apos;Integration&apos; ), ISCHANGED(OwnerId))</errorConditionFormula>
        <errorMessage>Cannot change owner of Account unless Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Directly_Create_Account</fullName>
        <active>false</active>
        <description>An account cannot directly be created.  It must be created form converting an existing lead.</description>
        <errorConditionFormula>AND(NOT(Was_Lead__c), ISNEW(), RecordType.Name != &apos;Ship To&apos;, RecordType.Name &lt;&gt; &apos;Outfitter&apos;, $Profile.Name != &apos;System Administrator&apos;, $Profile.Name != &apos;Integration&apos;,  $Profile.Name != &apos;Support Team User - Custom Logo&apos;)</errorConditionFormula>
        <errorMessage>An account cannot be directly created.  It must be created from converting an existing lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Send_to_ERP_Inactive_Dealer</fullName>
        <active>false</active>
        <description>Cannot send request to ERP.  This dealer is inactive.</description>
        <errorConditionFormula>AND(PRIORVALUE(Sync_with_ERP__c) = FALSE, Sync_with_ERP__c = TRUE,  NOT(ISPICKVAL(Dealer_Status__c,&apos;Active&apos; )))</errorConditionFormula>
        <errorMessage>Cannot send request to ERP.  This dealer is inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_3_Letter</fullName>
        <active>false</active>
        <description>A valid two-letter state code is required.</description>
        <errorConditionFormula>AND(OR(LEN(BillingCountry) &gt;3),(LEN( ShippingCountry) &gt; 3 ))</errorConditionFormula>
        <errorMessage>A valid three-letter Country code is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EDI_Store_ID_Num_Only</fullName>
        <active>false</active>
        <description>check to make sure this is a number only.</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK( EDI_Ship_To_Code__c )),
  NOT(ISNUMBER( EDI_Ship_To_Code__c )) 
)</errorConditionFormula>
        <errorDisplayField>EDI_Ship_To_Code__c</errorDisplayField>
        <errorMessage>CAN ONLY BE A NUMBER (No letters or special characters)!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_is_required_for_Email_invoice_pref</fullName>
        <active>false</active>
        <description>A valid email is required for accounts with email as an invoice preference.</description>
        <errorConditionFormula>AND(ISBLANK(Email__c), ISPICKVAL(Invoice_Preference__c,&apos;EMail&apos;))</errorConditionFormula>
        <errorMessage>A valid email is required for accounts with email as an invoice preference.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fraud_Customer_Unflagging_Validation</fullName>
        <active>true</active>
        <description>This rule restricts the users to unflag the fraud customer once approved.</description>
        <errorConditionFormula>IF( AND(CONTAINS(Fraud_Approval_Status__c , &apos;Approved&apos;),PRIORVALUE(Fraud__c) = true,ISCHANGED(Fraud__c), $UserRole.Name  &lt;&gt;  Account_owner_s_Manager_Role__c ) , true, false)</errorConditionFormula>
        <errorMessage>Fraud flag changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fraud_Description_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF((Fraud__c  = true  &amp;&amp; ISBLANK(FraudDescription__c) ), true, false)</errorConditionFormula>
        <errorDisplayField>FraudDescription__c</errorDisplayField>
        <errorMessage>Fraud Description is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payments_Terms_Credit_Card</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Payment_Terms__c = &apos;Credit Card&apos;)</errorConditionFormula>
        <errorMessage>Please select Credit Card Terms to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Either_Email_or_No_Email_Avail</fullName>
        <active>false</active>
        <description>Require user to populate either an email or the no email available checkbox but not both.</description>
        <errorConditionFormula>OR(AND(PersonEmail &lt;&gt; &quot;&quot;,  No_Email_Available__c &lt;&gt; False,  IsPersonAccount), AND(PersonEmail = &quot;&quot;, No_Email_Available__c = False,IsPersonAccount))</errorConditionFormula>
        <errorDisplayField>No_Email_Available__c</errorDisplayField>
        <errorMessage>Please check this box only if an email address is NOT available.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShipToID_Limited_To_14_Characters</fullName>
        <active>false</active>
        <description>Limits the ShipTo ID field to 14 characters max. Same as Epicor</description>
        <errorConditionFormula>LEN( ShipToID__c )  &gt;  14</errorConditionFormula>
        <errorMessage>ShipTo ID field needs to be 14 characters or less to sync with Epicor!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShipToNumonShipTo</fullName>
        <active>false</active>
        <description>If Ship To record, Ship To Number is required</description>
        <errorConditionFormula>AND(ISPICKVAL(Type, &quot;Ship To&quot;), ISBLANK( ERP_Ship_To_Number__c ))</errorConditionFormula>
        <errorMessage>Ship To Number Required for Ship To Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_2_Letter</fullName>
        <active>false</active>
        <description>A valid two-letter state code is required.</description>
        <errorConditionFormula>AND(OR(LEN(BillingState) &gt;2),(LEN( ShippingState) &gt; 2 ))</errorConditionFormula>
        <errorMessage>A valid two-letter state code is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Credit_Card_Number</fullName>
        <active>false</active>
        <description>Please enter a valid credit card number without spaces, dashes, or non-numeric characters (16 digits for Visa/Mastercard/Discover, 15 digits for AMEX).</description>
        <errorConditionFormula>OR(AND(NOT(REGEX( Credit_Card_Number__c , &quot;[0-9]{16}&quot; )), LEN( Credit_Card_Number__c) &lt;&gt; 0,  $User.ProfileId &lt;&gt; &apos;00ei0000000KBhn&apos;, NOT(ISPICKVAL(Credit_Card_Type__c, &apos;AMEX&apos;)) ), AND(NOT(REGEX( Credit_Card_Number__c , &quot;[0-9]{15}&quot; )), LEN( Credit_Card_Number__c) &lt;&gt; 0,  $User.ProfileId &lt;&gt; &apos;00ei0000000KBhn&apos;, ISPICKVAL(Credit_Card_Type__c, &apos;AMEX&apos;) ))</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid credit card number without spaces, dashes, or non-numeric characters (16 digits for Visa/Mastercard/Discover, 15 digits for AMEX).</errorMessage>
    </validationRules>
</CustomObject>